chore: Update other routes
