# docs/swagger.json
@@ -9,7 +9,57 @@
     "host": "localhost:6969",
     "basePath": "/api",
     "paths": {
-        "/auth/confirm": {
+        "/activity": {
+            "get": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "description": "reeturns user's workout history",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "workout"
+                ],
+                "summary": "Get user's activity history",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Begin date",
+                        "name": "begin",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "End date",
+                        "name": "end",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.ActivityHistory"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth//account/confirm": {
             "post": {
                 "description": "confirms user's email",
                 "consumes": [
@@ -21,7 +71,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Confirm email",
+                "summary": "Confirm account's email",
                 "parameters": [
                     {
                         "description": "Token",
@@ -29,7 +79,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requestbody.ConfirmEmail"
+                            "$ref": "#/definitions/requestbody.ConfirmAccount"
                         }
                     }
                 ],
@@ -52,9 +102,38 @@
                 }
             }
         },
-        "/auth/login": {
+        "/auth/account": {
+            "get": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "description": "returns an user's information, that currently logged in",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get information about current user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.User"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.Message"
+                        }
+                    }
+                }
+            },
             "post": {
-                "description": "check if user exists, and return an access token",
+                "description": "create user in database",
                 "consumes": [
                     "application/json"
                 ],
@@ -64,7 +143,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Log into user's account",
+                "summary": "Register user",
                 "parameters": [
                     {
                         "description": "User information",
@@ -72,16 +151,59 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requestbody.Login"
+                            "$ref": "#/definitions/requestbody.CreateAccount"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.Message"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/responsebody.Message"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/password": {
+            "patch": {
+                "description": "updates password for user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Update password",
+                "parameters": [
+                    {
+                        "description": "User information",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requestbody.UpdatePassword"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.Token"
-                        }
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -141,9 +263,9 @@
                 }
             }
         },
-        "/auth/password/update": {
-            "patch": {
-                "description": "updates password for user",
+        "/auth/session": {
+            "post": {
+                "description": "check if user exists, and return an access token",
                 "consumes": [
                     "application/json"
                 ],
@@ -153,7 +275,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Update password",
+                "summary": "Log into user's account",
                 "parameters": [
                     {
                         "description": "User information",
@@ -161,58 +283,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requestbody.UpdatePassword"
+                            "$ref": "#/definitions/requestbody.CreateSession"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
-                    },
-                    "400": {
-                        "description": "Bad Request",
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responsebody.Message"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.Message"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/register": {
-            "post": {
-                "description": "create user in database",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "Register user",
-                "parameters": [
-                    {
-                        "description": "User information",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requestbody.Register"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.User"
+                            "$ref": "#/definitions/responsebody.Token"
                         }
                     },
                     "400": {
@@ -221,14 +300,8 @@
                             "$ref": "#/definitions/responsebody.Message"
                         }
                     },
-                    "403": {
-                        "description": "Forbidden",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.Message"
-                        }
-                    },
-                    "409": {
-                        "description": "Conflict",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/responsebody.Message"
                         }
@@ -254,93 +327,6 @@
                         "description": "ok",
                         "schema": {
                             "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/me": {
-            "get": {
-                "security": [
-                    {
-                        "AccessToken": []
-                    }
-                ],
-                "description": "returns an user's information, that currently logged in",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Get information about current user",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.User"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.Message"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.Message"
-                        }
-                    }
-                }
-            }
-        },
-        "/me/workouts": {
-            "get": {
-                "security": [
-                    {
-                        "AccessToken": []
-                    }
-                ],
-                "description": "reeturns user's workout history",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "workout"
-                ],
-                "summary": "Get workout history",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Begin date",
-                        "name": "begin",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "End date",
-                        "name": "end",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.Workouts"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/responsebody.Message"
                         }
                     }
                 }
@@ -393,13 +379,47 @@
         }
     },
     "definitions": {
-        "requestbody.ConfirmEmail": {
+        "requestbody.ConfirmAccount": {
             "type": "object",
             "required": [
                 "token"
             ],
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestbody.CreateAccount": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "requestbody.CreateSession": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
@@ -419,40 +439,6 @@
                     "type": "integer"
                 },
                 "kind": {
-                    "type": "string"
-                }
-            }
-        },
-        "requestbody.Login": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "requestbody.Register": {
-            "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
                     "type": "string"
                 }
             }
@@ -480,6 +466,23 @@
                 },
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "responsebody.ActivityHistory": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "workouts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responsebody.Workout"
+                    }
                 }
             }
         },
@@ -527,23 +530,6 @@
                 },
                 "kind": {
                     "type": "string"
-                }
-            }
-        },
-        "responsebody.Workouts": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "string"
-                },
-                "workouts": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/responsebody.Workout"
-                    }
                 }
             }
         }
